Thu May 17 12:16:57 2001  Priyanka Gontla  <pgontla@ece.uci.edu>

	* ace/CDR_Stream.h (ACE_InputCDR): 
	* ace/CDR_Stream.cpp: 
	  Modified so that even the Message_Block_Allocators are also
	  allocated from TSS memory. The constructor of ACE_OutputCDR
	  changes.
	
Thu May 17 11:51:03 2001  Carlos O'Ryan  <coryan@uci.edu>

        * include/makeinclude/rules.local.GNU:
          Removed misuse of CC_OUTPUT_FLAG in the middle of an 'if' shell
          statement.  Chances are that this was the result of a global
          search and replace.  Thanks to Cristian Ferretti
          <cristian_ferretti@yahoo.com> for pointing this out.

Thu May 17 12:43:26 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

        * bin/nightlybuilds/builds.lst: Removed the beguine builds for
          some time till we get Redhat machine in place.

Thu May 17 11:36:02 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/Configuration.cpp: Fixed an inconsistency in the
          enumerate_sections() method so that
          ACE_Configuration_Win32Registry and ACE_Configuration_Heap will
          behave the same.  ACE_Configuration_Win32Registry was returning
          -2 upon no more sections to enumerate, rather than 1.  This is
          because it is not checking for a return of ERROR_NO_MORE_ITEMS
          from ACE_TEXT_RegEnumKeyEx.  Thanks to Kevin Burge
          <kcburge@systemware-inc.com> for reporting this.

Thu May 17 10:46:31 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/nightlybuilds/builds.lst:

          Adding the HP-UX 11.00 build back to the list.

Thu May 17 10:16:03 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/POSIX_Asynch_IO.{h,cpp}: There are some weird inconsistencies
          between the declaration and definition of the recv() methods in
          ACE_POSIX_SIG_Asynch_Read_Dgram and
          ACE_POSIX_AIOCB_Asynch_Read_Dgram.  I've made a fix that