@@ -1240,6 +1240,7 @@ Vsevolod Novikov <novikov@ci.nnov.ru>
 Andrew Munro <Andrew.Munro@Australia.Boeing.com>
 Nicolas Huynh <HUYNH_Nicolas@cena.fr>
 Kevin Burge <kcburge@systemware-inc.com>
+Wayne Erchak <wayne@stentor.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
